syntax = "proto3";
package customersvc;
option java_package = "com.example.customersvc.grpc";
option java_multiple_files = true;

message Customer {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phone = 5;
}

message GetCustomerRequest { string id = 1; }
message GetCustomerResponse { Customer customer = 1; }
message ListCustomersRequest {}
message ListCustomersResponse { repeated Customer customers = 1; }

service CustomerService {
  rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse);
  rpc ListCustomers(ListCustomersRequest) returns (ListCustomersResponse);
}
